-------------------------------------------------------------------------------
Changes in version 0.10

- Fixed bug in bcron-exec that allowed cron jobs to access the temporary
  output file from all other jobs that are still running.

- Fixed a debug note that forced supplementary groups off in bcron-exec.

- Fixed a bug in bcron-exec that would cause lost log messages.

- Fixed handling of failure to change directory at startup.

- Blocked access to files outside of the spool in bcron-spool.

- Added debug messages to bcron-exec.

- Fixed a bug in bcron-spool that caused listing missing crontabs to
  silently succeed.

- Added support for dumping the current job schedule in bcron-sched.

- Added configuration file for hard-coded sendmail command line.

- Added a self-test mode for bcron-exec.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.09

- Fixed several build and portability issues.

- The default path for bcron-spool is changed to /var/run/bcron-spool

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.08

- Reordered some things in bcron-exec to provide error emails more often
  when jobs fail to run because of system errors.

- bcron-update internally strips slashes from paths to prevent problems
  with doubled or trailing slashes in arguments.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.07

- Added logging of warnings when crontabs fail to be parsed properly.

- Added sending email notification if a job was killed.
