@@ -1,3 +1,5 @@
+- Updated to build against bglibs v2
+
 -------------------------------------------------------------------------------
 Changes in version 0.10
 
